[package]
name = "rust_system_programming_introduction"
version = "0.1.0"
authors = ["yuizho <yuizho3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "writer_file"
path = "src/writer/file.rs"

[[bin]]
name = "writer_stdout"
path = "src/writer/stdout.rs"

[[bin]]
name = "writer_network"
path = "src/writer/network.rs"